--- a/java/nbproject/project.properties
+++ b/java/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jedis-3.0.0-SNAPSHOT-javadoc.jar=libs/jedis-3.0.0-SNAPSHOT-javadoc.jar
+file.reference.jedis-3.0.0-SNAPSHOT.jar=libs/jedis-3.0.0-SNAPSHOT.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +43,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jedis-3.0.0-SNAPSHOT.jar}:\
+    ${file.reference.jedis-3.0.0-SNAPSHOT-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -52,7 +56,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,6 +78,7 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
