Update for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /php/nbproject/private/
+/php/docs/html/
+/php/docs/latex/
+/php/src/vendor/
+/php/images.full/
+/php/images.thumb/
 /java/nbproject/private/
+/docs/
+/WebApplication1/nbproject/private/
+/java/build/
+/java/dist/
