Sample image for PHP project

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /php/src/vendor/
 /php/images.full/
 /php/images.thumb/
+/go/images.full/
+/go/images.thumb/
 /java/nbproject/private/
 /docs/
 /WebApplication1/nbproject/private/
