--- a/java/nbproject/project.properties
+++ b/java/nbproject/project.properties
@@ -28,10 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.3.jar=libs/commons-fileupload-1.3.3.jar
 file.reference.commons-io-1.3.2.jar=libs/commons-io-1.3.2.jar
 file.reference.gson-2.8.5.jar=libs/gson-2.8.5.jar
 file.reference.jedis-3.0.0-SNAPSHOT.jar=libs/jedis-3.0.0-SNAPSHOT.jar
-file.reference.resteasy-multipart-provider-3.6.2.Final.jar=libs/resteasy-multipart-provider-3.6.2.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,8 +48,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jedis-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.resteasy-multipart-provider-3.6.2.Final.jar}:\
-    ${file.reference.commons-io-1.3.2.jar}
+    ${file.reference.commons-io-1.3.2.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
