Python, Node.JS projects v.0.0.1

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -4,7 +4,7 @@ FROM golang:1.10-alpine
 #ENV https_proxy http://172.17.0.1:5865
 #COPY apt.conf /etc/apt/apt.conf
 
-RUN apk update && apk add make git curl net-tools imagemagick
+RUN apk update && apk add make git curl imagemagick
 
 CMD exec go get github.com/go-redis/redis
 CMD exec go get github.com/gorilla/mux
