--- a/java/nbproject/project.properties
+++ b/java/nbproject/project.properties
@@ -48,8 +48,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jedis-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.commons-fileupload-1.3.3.jar}:\
-    ${file.reference.commons-io-1.3.2.jar}
+    ${file.reference.commons-io-1.3.2.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -87,7 +87,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=-Dhttp.keepAlive=false
+runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
