C++ project v.0.7 (Docker is ready, only config/ini is absent)

--- a/cpp/Dockerfile
+++ b/cpp/Dockerfile
@@ -1,11 +1,23 @@
-FROM alphine:latest
+FROM debian
 
-#ENV http_proxy http://172.17.0.1:5865
-#ENV https_proxy http://172.17.0.1:5865
-#COPY apt.conf /etc/apt/apt.conf
+ENV http_proxy http://172.17.0.1:5865
+ENV https_proxy http://172.17.0.1:5865
+COPY apt.conf /etc/apt/apt.conf
 
-RUN apk update && apk add curl imagemagick
-RUN apk add libboost-system-dev libboost-filesystem-dev make g++ 
+RUN apt-get -y update && apt-get -y install curl imagemagick
+RUN apt-get -y install libboost-all-dev make cmake g++ 
+RUN apt-get -y install pkg-config
+RUN apt-get -y install libfastjson-dev libpthread-stubs0-dev libcurl4-gnutls-dev
+
+RUN mkdir -p /usr/local/imageapi
+COPY libs /usr/local/imageapi/libs
+COPY nbproject /usr/local/imageapi/nbproject
+COPY *.cpp /usr/local/imageapi/
+COPY *.h /usr/local/imageapi/
+COPY Makefile /usr/local/imageapi/
+COPY prepare.sh /usr/local/imageapi/
+RUN cd  /usr/local/imageapi/ && sh ./prepare.sh 
+RUN cd  /usr/local/imageapi/ && make
 
 EXPOSE 8080
 
