--- a/js/Dockerfile
+++ b/js/Dockerfile
@@ -6,11 +6,8 @@ COPY apt.conf /etc/apt/apt.conf
 
 RUN apt-get -y update
 RUN apt-get -y install curl imagemagick
-
-#RUN echo "Deploy application"
-#COPY dist/ImageUpload_-_Java.war /root
-#RUN asadmin start-domain && asadmin deploy /root/ImageUpload_-_Java.war && asadmin create-http-listener --listeneraddress 0.0.0.0 --listenerport 8000 --defaultvs server externalListener
+RUN mkdir /usr/local/imageapi
+RUN cd /usr/local/imageapi && npm install express
 
 EXPOSE 8000
-#EXPOSE 4848
 
