--- a/js/Dockerfile
+++ b/js/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:8
 
-ENV http_proxy http://172.17.0.1:5865
-ENV https_proxy http://172.17.0.1:5865
-COPY apt.conf /etc/apt/apt.conf
+#ENV http_proxy http://172.17.0.1:5865
+#ENV https_proxy http://172.17.0.1:5865
+#COPY apt.conf /etc/apt/apt.conf
 
 RUN apt-get -y update
 RUN apt-get -y install curl imagemagick
